--- a/pom.xml
+++ b/pom.xml
@@ -1,32 +1,57 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-
-
-  <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.1.4.RELEASE</version>
-    <relativePath/>
-  </parent>
-
-
-  <groupId>com.niu</groupId>
   <artifactId>springboot-cache</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
 
 
-  <name>springboot-cache</name>
-  <description>spring cache project for Spring Boot</description>
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <groupId>org.springframework.boot</groupId>
+      </plugin>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <java.version>1.8</java.version>
-    <mysql.version>8.0.11</mysql.version>
-  </properties>
+      <plugin>
+        <artifactId>mybatis-generator-maven-plugin</artifactId>
+        <configuration>
+          <configurationFile>mybatisGenerator.xml</configurationFile>
+          <overwrite>true</overwrite>
+          <verbose>true</verbose>
+        </configuration>
+        <dependencies>
+          <dependency>
+            <artifactId>mybatis3-generator-plugin</artifactId>
+            <groupId>com.github.oceanc</groupId>
+            <version>0.4.0</version>
+          </dependency>
+
+          <dependency>
+            <artifactId>mysql-connector-java</artifactId>
+            <groupId>mysql</groupId>
+            <scope>runtime</scope>
+            <version>${mysql.version}</version>
+          </dependency>
+        </dependencies>
+
+        <executions>
+          <execution>
+            <goals>
+              <goal>generate</goal>
+            </goals>
+            <id>Generate MyBatis Artifacts</id>
+            <phase>deploy</phase>
+          </execution>
+        </executions>
+
+        <groupId>org.mybatis.generator</groupId>
+
+        <version>1.3.2</version>
+      </plugin>
+
+    </plugins>
+  </build>
+
 
   <dependencies>
     <!--
@@ -34,8 +59,8 @@
     在0配置的情况下，默认使用SimpleCacheConfiguration，即使用ConcurrentMapCacheManager
     -->
     <dependency>
-      <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-cache</artifactId>
+      <groupId>org.springframework.boot</groupId>
     </dependency>
 
     <!--
@@ -51,118 +76,95 @@
       添加依赖，spring boot会自动配置RedisCacheManager,RedisTemplate的bean
     -->
     <dependency>
-      <groupId>net.sf.ehcache</groupId>
       <artifactId>ehcache</artifactId>
+      <groupId>net.sf.ehcache</groupId>
     </dependency>
     <dependency>
-      <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
+      <groupId>com.google.guava</groupId>
       <version>18.0</version>
     </dependency>
     <dependency>
-      <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-redis</artifactId>
+      <groupId>org.springframework.boot</groupId>
     </dependency>
 
-
     <dependency>
-      <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter</artifactId>
+      <groupId>org.springframework.boot</groupId>
       <version>2.1.4.RELEASE</version>
     </dependency>
     <dependency>
-      <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
-    </dependency>
-
-
-
-    <dependency>
       <groupId>org.springframework.boot</groupId>
+    </dependency>
+
+
+    <dependency>
       <artifactId>spring-boot-starter-jdbc</artifactId>
+      <groupId>org.springframework.boot</groupId>
     </dependency>
     <dependency>
-      <groupId>org.mybatis.spring.boot</groupId>
       <artifactId>mybatis-spring-boot-starter</artifactId>
+      <groupId>org.mybatis.spring.boot</groupId>
       <version>2.0.1</version>
     </dependency>
     <dependency>
-      <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
+      <groupId>mysql</groupId>
       <scope>runtime</scope>
     </dependency>
 
 
-
     <dependency>
-      <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
+      <groupId>org.projectlombok</groupId>
       <optional>true</optional>
     </dependency>
     <dependency>
-      <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-devtools</artifactId>
+      <groupId>org.springframework.boot</groupId>
       <scope>runtime</scope>
     </dependency>
     <dependency>
-      <groupId>commons-beanutils</groupId>
       <artifactId>commons-beanutils</artifactId>
+      <groupId>commons-beanutils</groupId>
       <version>1.9.4</version>
+    </dependency>
+    <dependency>
+      <artifactId>fastjson</artifactId>
+      <groupId>com.alibaba</groupId>
+      <version>1.2.62</version>
     </dependency>
 
 
     <dependency>
-      <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
+      <groupId>org.springframework.boot</groupId>
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <description>spring cache project for Spring Boot</description>
+  <groupId>com.niu</groupId>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-maven-plugin</artifactId>
-      </plugin>
 
-      <plugin>
-        <groupId>org.mybatis.generator</groupId>
-        <artifactId>mybatis-generator-maven-plugin</artifactId>
-        <version>1.3.2</version>
+  <modelVersion>4.0.0</modelVersion>
+  <name>springboot-cache</name>
 
-        <configuration>
-          <configurationFile>mybatisGenerator.xml</configurationFile>
-          <verbose>true</verbose>
-          <overwrite>true</overwrite>
-        </configuration>
+  <parent>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <groupId>org.springframework.boot</groupId>
+    <relativePath/>
+    <version>2.1.4.RELEASE</version>
+  </parent>
 
-        <executions>
-          <execution>
-            <id>Generate MyBatis Artifacts</id>
-            <phase>deploy</phase>
-            <goals>
-              <goal>generate</goal>
-            </goals>
-          </execution>
-        </executions>
+  <properties>
+    <java.version>1.8</java.version>
+    <mysql.version>8.0.11</mysql.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+  </properties>
 
-        <dependencies>
-          <dependency>
-            <groupId>com.github.oceanc</groupId>
-            <artifactId>mybatis3-generator-plugin</artifactId>
-            <version>0.4.0</version>
-          </dependency>
-
-          <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>${mysql.version}</version>
-            <scope>runtime</scope>
-          </dependency>
-        </dependencies>
-      </plugin>
-
-    </plugins>
-  </build>
+  <version>0.0.1-SNAPSHOT</version>
 
 </project>
