--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -14,8 +14,16 @@ spring:
     restart:
       enabled: true
       additional-paths: mapper
-
-
+  redis:
+    database: 0
+    host: 127.0.0.1
+    port: 6379
+    password: null
+    timeout: 1000
+    jedis:
+      pool:
+        max-active: 100
+        max-wait: -1ms
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
@@ -25,9 +33,3 @@ mybatis:
   map-underscore-to-camel-case: true
   use-generated-keys: true
   log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-
-
-
-logging:
-  level:
-    com.niu.springbootcache.mapper: debug
